--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,61 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Merienda', cursive;
+    text-align: center;
+}
+
+h1 {
+    color: blue;
+}
+
+#errors {
+    color: red;
+}
+
+#board {
+    width: 540px;
+    height: 540px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+
+    background-color: grey;
+}
+
+#numbers {
+    width: 540px;
+    height: 60px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+
+    background-color: green;
+}
+
+.tile {
+    width: 60px;
+    height: 60px;
+    border: 1px solid grey;
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.number {
+    width: 60px;
+    height: 60px;
+    border: 1px solid black;
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
