--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,6 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 10px;
-
-    background-color: grey;
 }
 
 #numbers {
@@ -34,15 +32,13 @@ h1 {
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-
-    background-color: green;
 }
 
 .tile {
     width: 60px;
     height: 60px;
     border: 1px solid grey;
-    font-size: 20px;
+    font-size: 40px;
     font-weight: bold;
     display: flex;
     justify-content: center;
@@ -50,12 +46,29 @@ h1 {
 }
 
 .number {
-    width: 60px;
-    height: 60px;
+    width: 56px;
+    height: 56px;
     border: 1px solid black;
-    font-size: 20px;
+    margin: 2px;
+    font-size: 40px;
     font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.number-selected {
+    background-color: cadetblue;
+}
+
+.tile-start {
+    background-color: darkgray;
+}
+
+.horizontal-line {
+    border-bottom: 4px solid black;
+}
+
+.vertical-line {
+    border-right: 4px solid black;
 }
