--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,13 +13,29 @@ h1 {
     color: blue;
 }
 
+h3 {
+    color: blue;
+}
+
+#diff {
+    color: blue;
+}
+
+button {
+    width: 200px;
+    height: 40px;
+    background-color: blue;
+    color: white;
+    font-size: 20px;
+}
+
 #errors {
     color: red;
 }
 
 #board {
-    width: 540px;
-    height: 540px;
+    width: 450px;
+    height: 450px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -27,7 +43,7 @@ h1 {
 }
 
 #numbers {
-    width: 540px;
+    width: 450px;
     height: 60px;
     margin: 0 auto;
     display: flex;
@@ -35,10 +51,10 @@ h1 {
 }
 
 .tile {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     border: 1px solid grey;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
     display: flex;
     justify-content: center;
@@ -46,11 +62,11 @@ h1 {
 }
 
 .number {
-    width: 56px;
-    height: 56px;
+    width: 46px;
+    height: 46px;
     border: 1px solid black;
     margin: 2px;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
     display: flex;
     justify-content: center;
